# cfg-neuralese

./: .gitignore  DEMO.md  DEMO_README.md  NEXT.md  README.md  SEED.md  STATUS.md  TASKS.md  main.py  pyproject.toml  test_evolution_mini.py  test_mutations.py  test_proposer.py  test_proposer_integration.py  test_proposer_pipeline.py  test_step3.py
artifacts/best/: fewshots.json
artifacts/run_20250809_215933/: config.json
artifacts/run_20250809_220009/: evolution_log.csv
artifacts/run_20250809_220304/: evolution_log.csv
artifacts/run_20250809_220627/: evolution_log.csv
artifacts/run_20250809_221227/: config.json  final_grammar.lark
artifacts/run_20250809_221623/: evolution_log.csv  grammar_round_1.lark
artifacts/run_20250809_222303/: evolution_log.csv  grammar_round_1.lark
artifacts/run_20250809_234130/: config.json
artifacts/run_20250809_234834/: config.json  evolution_log.csv  grammar_round_2.lark
artifacts/run_20250810_021948/: config.json  evolution_log.csv  grammar_round_2.lark  grammar_round_3.lark
artifacts/run_20250810_111331/: config.json
configs/: defaults.yaml
examples/: usage_example.py
prompts/: listener.txt  proposer.txt  speaker.txt
scripts/: demo.py  live_process.py  offline_optimize.py  qa.py
src/: __init__.py  types.py
src/agents/: listener.py  openai_client.py  proposer.py  speaker.py
src/artifacts/: __init__.py  io.py  save_best.py
src/env/: scenes.py  scoring.py
src/grammar/: __init__.py  manual_patch.lark  mutated_grammar.lark  mutations.py  patch_schema.json  proposer_test.lark  utils.py
tests/: test_mvp.py
(+53 files in other folders)
